# ksana

./: .gitignore  Cargo.toml  LICENSE.md  README.md  cspell.json  pyproject.toml
.github/workflows/: build.yml  spellcheck.yml
src/: io.rs  main.rs  shm.rs  sleeper.rs  traits.rs
src/commands/: dump.rs  inspect.rs  mod.rs  play.rs  record.rs
src/sims/: mod.rs
src/sims/ac/: README.md  connector.rs  data.rs  mod.rs  player.rs  shmio.rs
src/sims/assettocorsa/: connector.rs  data.rs  mod.rs  player.rs  shm.rs  shmio.rs
src/sims/iracing/: connector.rs  data.rs  mod.rs  player.rs
tests/: conftest.py  test_smoke.py
