[package]
name = "ksana"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.53", features = ["derive"] }
ctrlc = "3.5.1"
flate2 = "1.1.5"
thiserror = "2.0.17"
anyhow = "1.0.100"

windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Security",
] }
chrono = { version = "0.4.42" }

[lints.clippy]
all = "warn"
correctness = "warn"
suspicious = "warn"
complexity = "warn"
perf = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
panic_in_result_fn = "warn"
todo = "warn"
unimplemented = "warn"
