[package]
name = "ksana"
version = "0.3.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.6.1", features = ["derive"] }
ctrlc = "3.5.2"
flate2 = "1.1.9"
thiserror = "2.0.18"
anyhow = "1.0.102"

windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Security",
] }
chrono = { version = "0.4.44" }
humantime = "2.3.0"

[lints.clippy]
all = "warn"
correctness = "warn"
suspicious = "warn"
complexity = "warn"
perf = "warn"
unwrap_used = "warn"
panic = "warn"
panic_in_result_fn = "warn"
todo = "warn"
unimplemented = "warn"
